--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
 
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
