--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,13 @@
 
 @charset "utf-8";
 $link-color: black;
+$masthead-link-color: black;
+$serif      : 'Merriweather', Georgia, Times, serif;
+$sans-serif : 'Open Sans', sans-serif;
+$monospace  : Monaco, Consolas, "Lucida Console", monospace;
+$global-font-family : $serif;
+$header-font-family : $sans-serif;
+
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
