--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@
 @charset "utf-8";
 $link-color: black;
 $masthead-link-color: black;
-$serif      : 'Merriweather', Georgia, Times, serif;
+$serif      : Georgia, Times, serif;
 $sans-serif : 'Open Sans', sans-serif;
 $monospace  : Monaco, Consolas, "Lucida Console", monospace;
 $global-font-family : $serif;
