--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,7 +3,7 @@
 ---
 
 @charset "utf-8";
-$link-color: LightGray;
+$link-color: Gray;
 $masthead-link-color: black;
 $serif      : 'Merriweather',Georgia, Times, serif;
 $sans-serif : 'Open Sans', sans-serif;
