--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,11 @@ $header-font-family : $sans-serif;
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
+body {
+    line-height: 1.3;
+    font-size: 0.75em;
+}
+
 a {
     text-decoration: none;
     font-weight: bolder;
