--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@ $masthead-link-color: black;
 $serif      : 'Merriweather',Georgia, Times, serif;
 $sans-serif : 'Open Sans', sans-serif;
 $monospace  : Monaco, Consolas, "Lucida Console", monospace;
-$global-font-family : $serif;
+$global-font-family : $sans-serif;
 $header-font-family : $sans-serif;
 
 
