--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,6 @@
 <!-- start custom head snippets -->
 
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Open+Sans:wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Open+Sans:wght@0,300;0,600;0,400;0,700;1,400;1,700;1,300;1,600&display=swap" rel="stylesheet">
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
