--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,4 +4,9 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+  <!-- for mathjax support -->
+    {% if page.mathjax %}
+      <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
+    {% endif %}
+
 <!-- end custom head snippets -->
