--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,26 +4,18 @@
 
 @charset "utf-8";
 $link-color: black;
-$masthead-link-color: black;
+$primary-color: black;
 $serif      : 'Merriweather',Georgia, Times, serif;
 $sans-serif : 'Open Sans', sans-serif;
 $monospace  : Monaco, Consolas, "Lucida Console", monospace;
 $global-font-family : $sans-serif;
 $header-font-family : $sans-serif;
+$doc-font-size: 12;
 
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-body {
-    line-height: 1.4;
-    font-size: 0.75em;
-}
-
-a {
-    text-decoration: none;
-    font-weight: bolder;
-}
 
 .teamwrapper {
   display: grid;
