--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,8 @@ $sans-serif : 'Open Sans', sans-serif;
 $monospace  : Monaco, Consolas, "Lucida Console", monospace;
 $global-font-family : $sans-serif;
 $header-font-family : $sans-serif;
-$doc-font-size: 12;
+$doc-font-size: 11;
+$paragraph-indent: true;
 
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
