--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,9 +19,16 @@ $doc-font-size: 11;
 
 .teamwrapper {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  margin-left: 20px;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;  
   align-items: start;
+}
+
+@media (min-width: 600px) {
+  .teamwrapper {
+  grid-template-columns: repeat(3, 1fr);  
+}
 }
 
 .site-logo img {
