improve status.html

--- a/_layouts/status.html
+++ b/_layouts/status.html
@@ -14,30 +14,17 @@ layout: default
       <section class="page__content" itemprop="text">
         <h1>Statusmeldung</h1>
         <p>
-          Thema: <strong>{{page.title}}</strong><br>
-          Beginn: <strong>{{page.Beginn}}</strong><br>
-          Ende: <strong>{{page.Ende}}</strong><br>
-          Status: <strong>{{page.Status}}</strong>
+          Thema:&nbsp;  <strong>{{page.title}}</strong><br>
+          Beginn:&nbsp; <strong>{{page.Beginn}}</strong><br>
+          Ende:&nbsp;&nbsp;   <strong>{{page.Ende}}</strong><br>
+          Status:&nbsp; <strong>{{page.Status}}</strong>
         </p>
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
-      <footer class="page__meta">
-        {% if site.data.ui-text[site.locale].meta_label %}
-          <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
-        {% endif %}
-        {% include page__taxonomy.html %}
-        {% if page.last_modified_at %}
-          <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: "%B %-d, %Y" }}</time></p>
-        {% elsif page.date %}
-          <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time></p>
-        {% endif %}
-      </footer>
-
-      {% if page.share %}{% include social-share.html %}{% endif %}
-
-      {% include post_pagination.html %}
+      <footer class="page__meta">        
+      </footer>      
     </div>
     
   </article>
