--- a/_layouts/status.html
+++ b/_layouts/status.html
@@ -14,10 +14,10 @@ layout: default
       <section class="page__content" itemprop="text">
         <h1>Statusmeldung</h1>
         <p>
-          Thema:&nbsp;  <strong>{{page.title}}</strong><br>
-          Beginn:&nbsp; <strong>{{page.Beginn}}</strong><br>
-          Ende:&nbsp;&nbsp;   <strong>{{page.Ende}}</strong><br>
-          Status:&nbsp; <span class="statusbadge">{{page.Status}}</span>
+          <span style="width: 100px;">Thema:</span>  <strong>{{page.title}}</strong><br>
+          <span style="width: 100px;">Beginn:</span> <strong>{{page.Beginn}}</strong><br>
+          <span style="width: 100px;">Ende:</span>   <strong>{{page.Ende}}</strong><br>
+          <span style="width: 100px;">Status:</span> <span class="statusbadge">{{page.Status}}</span>
         </p>
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
